# topicos_avancados_ic_ii

./: .flake8  .gitignore  .nbqa-flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
applications/: Avaliação_de_Algoritmos.ipynb  Decision_Trees (1).ipynb  Feature_Importance.ipynb  Global_Surrogate.ipynb  Partial_Dependence_Plots.ipynb
docs/: Cronograma Disciplina Tópicos IC 2 - Página1.csv
notebooks/: 01.atividade-01-dt.ipynb  01.atividade_01.ipynb  02.atividade-02.md  03.atividade-03-surrogates.ipynb  04.atividade-04-feature_importance.ipynb  05.atividade-05-pdp_ice.ipynb  nb_utils.py
